correção no rodapé

--- a/site/index.html
+++ b/site/index.html
@@ -464,7 +464,7 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; 2025 Instituto Alpargatas e Universidade Federal da Paraíba. Todos os direitos reservados.</p>
-            <p class="text-sm text-gray-400 mt-2">Uma Análise de fatores relevantes que impactam na Qualidade da Educação nos municípios de atuação do Instituto Alpargatas, utilziando o Censo Escolar, Saeb, AFD, IDEB e INS.</p>
+            <p class="text-sm text-gray-400 mt-2">Uma Análise de fatores relevantes que impactam na Qualidade da Educação nos municípios de atuação do Instituto Alpargatas, utilizando dados do Censo Escolar, Saeb, AFD, IDEB e INS, disponíveis no portal do INEP</p>
                         <p class="text-sm text-gray-400 mt-2">Desenvolvido Por Deivyson Gomes, Ítalo Oliveira e Matheus Belchior</p>
         </div>
     </footer>
