--- a/site/index.html
+++ b/site/index.html
@@ -386,7 +386,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                      <h2 class="text-3xl md:text-4xl section-title mb-4">Análise Municipal do IQE nos municípios de atuação do Instituto Alpargatas</h2>
-                    <p class="max-w-3xl mx-auto text-lg text-gray-600">Selecione qualquer dos municípiso de atuação do Instituto para visualizar seu Índice de Qualidade da Educação (IQE) e entender o contexto socioeconômico e os resultados detalhados.</p>
+                    <p class="max-w-3xl mx-auto text-lg text-gray-600">Selecione qualquer um dos municípios de atuação do Instituto para visualizar o seu Índice de Qualidade de Educação (IQE), entender o contexto socioeconômico e os resultados detalhados.</p>
                 </div>
                 
                 <div class="card p-8 max-w-4xl mx-auto">
@@ -465,7 +465,8 @@
         <div class="container mx-auto px-6 text-center">
             <p>&copy; 2025 Instituto Alpargatas e Universidade Federal da Paraíba. Todos os direitos reservados.</p>
             <p class="text-sm text-gray-400 mt-2">Uma Análise de fatores relevantes que impactam na Qualidade da Educação nos municípios de atuação do Instituto Alpargatas, utilizando dados do Censo Escolar, Saeb, AFD, IDEB e INS, disponíveis no portal do INEP</p>
-                        <p class="text-sm text-gray-400 mt-2">Desenvolvido Por Deivyson Gomes, Ítalo Oliveira e Matheus Belchior</p>
+            <p class="text-sm text-gray-400 mt-2">Desenvolvido Por Deivyson Gomes, Ítalo Oliveira e Matheus Belchior</p>
+            <p class="text-sm text-gray-400 mt-2"><strong> Atenção, este é um trabalho acadêmico em desenvolvimento, os modelos ainda estão em evolução e não há nenhum vínculo com o instituto, sendo esse um trabalho demostrativo do índice caclulado</strong> </p>
         </div>
     </footer>
 
